--- a/AppTenis/templates/AppTenis/damas.html
+++ b/AppTenis/templates/AppTenis/damas.html
@@ -1,12 +1,10 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    damas
-</body>
-</html>
+{% extends 'AppTenis/padre.html' %}
+
+{% load static %}
+
+{% block titulo %}
+
+<h1 class="mb-5">SPORT CLUB MAGDALENA</h1>
+<h1 class="mb-5">TENIS</h1>
+<h3 class="mb-5">DAMAS</h3>
+{% endblock %}
